DesignProject/tests/error/test11.src
// variable used before declaration
func testUseBeforeDecl() -> integer {
    local result : integer;
    result := x + 5;  // error: x used before declaration
    local x : integer;
    return(result);
}


